--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>nero</title>
   </head>
   <body>
-    <div id="root"></div>
-    <h1>hello world</h1>
-    <script type="module" src="/src/main.tsx"></script>
+   <p><textarea name='v3' maxlength='*'></textarea></p>
   </body>
 </html>
