--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nero</title>
+    <style rel='stylesheet' href 'css.css'></style>
   </head>
   <body>
+    
    <p><textarea name='v3' maxlength='*'></textarea></p>
   </body>
 </html>
