--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nero</title>
-    <link rel="stylesheet" href="css.css">   
+    <link rel="stylesheet" href="css.css"> 
   </head>
   <body>
+    
    <p><textarea name='v3' maxlength='*'></textarea></p>
+<br>
+    <h2><?php
+    require_once 'php.php';
+      echo $x;
+      ?></h2>
+    <p><textarea name='v8' maxlength='*'> </textarea></p>
   </body>
 </html>
