--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
   <body>
     
    <p><textarea name='v3' maxlength='*'></textarea></p>
+    <script>console.log('Привет от JavaScript!');</script>
 <br>
-    <h2><?php
-    require_once 'php.php';
-      echo $x;
-      ?></h2>
     <p><textarea name='v8' maxlength='*'> </textarea></p>
   </body>
 </html>
