--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     
    <p><textarea name='v3' maxlength='*'></textarea></p>
     <script>console.log('Привет от JavaScript!');</script>
+    <script>document.getElementById("demo").innerHTML = 5 + 6;</script>
 <br>
     <p><textarea name='v8' maxlength='*'> </textarea></p>
+    <br>
+    <p id='demo'></p>
+    <button type="button" onclick="document.write(5 + 6)">Попробуй</button>
   </body>
 </html>
